gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-route
  labels:
    app: hello-world
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: hello-world-service
    weight: 100
  wildcardPolicy: None
